# silero-vad-go

./: .gitignore  Makefile  README.md  go.mod  go.sum
native/: CMakeLists.txt
native/include/: vad_bridge.h
native/src/: vad_bridge.c
speech/: bridge_purego_unix.go  bridge_purego_unsupported.go  detector.go  infer_darwin.go  infer_linux.go
